Add Custom Templates documentation page

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,6 +28,7 @@ nav:
     - Citations: academic/citations.md
     - Projects: academic/projects.md
     - Zettelkasten Methods: academic/zkn-method.md
+    - Custom Templates: academic/custom-templates.md
     - Presentations: academic/presentations.md
     - Pomodoro Timer: academic/pomodoro.md
   - References:
