--- a/config/en.yml
+++ b/config/en.yml
@@ -13,21 +13,33 @@ extra_css:
   - assets/app.css
 nav:
   - Welcome: index.md
-  - Setup: install.md
-  - Quick Start: 5-minutes.md
+  - First Steps:
+    - Setup: install.md
+    - Installing Pandoc: installing-pandoc.md
+    - Installing LaTeX: installing-latex.md
+    - Getting Started: get-started.md
+    - Get involved: get-involved.md
+    - FAQ: faq.md
+  - Concepts:
+    - File management: concepts/roots.md
+    - Context: concepts/context.md
+    - WYSIWYM: concepts/wysiwym.md
   - Guides:
     - Zettlr as a note taking app: guides/guide-notes.md
     - Zettlr as a Zettelkasten: guides/guide-zettelkasten.md
     - Zettlr as an IDE: guides/guide-ide.md
   - Core:
     - The Editor: core/editor.md
+    - Document Tabs: core/tabs.md
     - The File List: core/file-list.md
+    - AutoCorrect and MagicQuotes: core/autocorrect.md
     - Searching: core/search.md
+    - Importing: core/import.md
     - Exporting: core/export.md
     - Table Editor: core/tables.md
     - Custom CSS: core/custom-css.md
     - Localisation: core/localisation.md
-    - Attachment Sidebar: core/attachments.md
+    - Sidebar: core/attachments.md
   - Academic Tools:
     - Citations: academic/citations.md
     - Projects: academic/projects.md
@@ -41,8 +53,6 @@ nav:
     - Markdown Basics: reference/markdown-basics.md
     - Settings: reference/settings.md
     - Spell Checking: reference/spell-checking.md
-  - Get involved: get-involved.md
-  - FAQ: faq.md
 theme:
   name: readthedocs
   custom_dir: ../theme_override
