Fixed a reference bug in the nav

--- a/config/en.yml
+++ b/config/en.yml
@@ -52,7 +52,7 @@ nav:
     - Zettelkasten Methods: academic/zkn-method.md
     - Custom Templates: academic/custom-templates.md
   - References:
-    - Shortcuts: reference/shortcuts.md
+    - Keyboard Shortcuts: reference/keyboard-shortcuts.md
     - Markdown Basics: reference/markdown-basics.md
     - Settings: reference/settings.md
     - Spell Checking: reference/spell-checking.md
