--- a/config/fr.yml
+++ b/config/fr.yml
@@ -22,12 +22,16 @@ nav:
   - Fonctionnalités de base:
     - L'éditeur: core/editor.md
     - La liste de fichiers: core/file-list.md
+    - Auto-correction et guillemets magiques: core/autocorrect.md
     - Rechercher: core/search.md
     - Exporter avec Zettlr: core/export.md
     - Les tableaux dans Zettlr: core/tables.md
     - CSS personnalisée: core/custom-css.md
     - Localisation linguistique: core/localisation.md
     - Le panneau des annexes: core/attachments.md
+    - En-tête YAML: core/yaml-frontmatter.md
+    - Aperçu et impression: core/print-preview.md
+    - Mathématiques: core/math.md
   - Outils académiques:
     - Citations: academic/citations.md
     - Projets: academic/projects.md
