--- a/config/fr.yml
+++ b/config/fr.yml
@@ -13,8 +13,17 @@ extra_css:
   - assets/app.css
 nav:
   - Accueil: index.md
-  - Installation: install.md
-  - Zettlr en 5 minutes: 5-minutes.md
+ - Premiers pas:
+   - Installation: install.md
+   - Installer Pandoc: installing-pandoc.md
+   - Installer LaTeX: installing-latex.md
+   - Démarrage rapide: get-started.md
+   - Engagez-vous: get-involved.md
+   - FAQ: faq.md
+ - Concepts:
+     - Gestion de fichier: concepts/roots.md
+     - Contexts: concepts/context.md
+     - WYSIWYM: concepts/wysiwym.md
   - Guides:
     - Zettlr comme application de prise de notes: guides/guide-notes.md
     - Zettlr comme Zettelkasten: guides/guide-zettelkasten.md
@@ -43,7 +52,7 @@ nav:
     - Méthode Zettelkasten: academic/zkn-method.md
     - Modèles personnalisés: academic/custom-templates.md
   - Références:
-    - Raccourcis: reference/shortcuts.md
+    - Raccourcis: reference/keyboard-shortcuts.md
     - Les bases de Markdown: reference/markdown-basics.md
     - Paramétrage: reference/settings.md
     - Dictionnaires et vérification orthographique: reference/spell-checking.md
