minor changes in translation

--- a/config/ca.yml
+++ b/config/ca.yml
@@ -19,7 +19,7 @@ nav:
   - Per començar:
     - Per començar: get-started.md
     - Zettlr en 5 minuts: 5-minutes.md
-    - Get involved: get-involved.md
+    - Participeu: get-involved.md
     - Preguntes Més Freqüents (FAQ): faq.md
   #- Concepts:
   #  - File management: concepts/roots.md
