Add graph view documentation
Signed-off-by: Enrico Lefass <M4SSD35TRUCT10N@users.noreply.github.com>

--- a/config/de.yml
+++ b/config/de.yml
@@ -35,6 +35,7 @@ nav:
     - Pomodoro-Timer: academic/pomodoro.md
     - Lesbarkeitsmodus: academic/readability.md
     - Zettelkastenmethodologie: academic/zkn-method.md
+    - Graph Ansicht: academic/graph.md
     - Eigene Vorlagen: academic/custom-templates.md
   - Referenzen:
     - Tastaturkürzel: reference/shortcuts.md
