Add german translation of concepts
Add german translation of concepts with context.md, workspaces.md and wysiwym.md.

--- a/config/de.yml
+++ b/config/de.yml
@@ -19,6 +19,10 @@ nav:
     - Zettlr als Notizapp: guides/guide-notes.md
     - Zettlr als Zettelkasten: guides/guide-zettelkasten.md
     - Zettlr als IDE: guides/guide-ide.md
+  - Konzepte:
+    - Dateimanagement: concepts/workspaces.md
+    - Kontext: concepts/context.md
+    - WYSIWYM: concepts/wysiwym.md
   - Kern:
     - Editor: core/editor.md
     - Dateiliste: core/file-list.md
