--- a/config/en.yml
+++ b/config/en.yml
@@ -23,32 +23,33 @@ nav:
   - Basic Usage:
     - Workspaces and Folders: core/workspaces.md
     - Files: core/files.md
+    - Split View: core/split-view.md
     - Importing Files: core/import.md
     - Writing Markdown: core/writing-markdown.md
-    - Document Tabs: core/tabs.md
+    - Style and Grammar: core/style-and-grammar.md
+    - AutoCorrect and MagicQuotes: core/autocorrect.md
+    - Citations: academic/citations.md
+    - Math: core/math.md
+    - Snippets: core/snippets.md
+    - Searching: core/search.md
+    - Table Editor: core/tables.md
+    - Print and Preview: core/print-preview.md
+    - Exporting: core/export.md
+  - Advanced Usage:
+    - YAML Frontmatter: core/yaml-frontmatter.md
+    - Readability: academic/readability.md
+    - Sidebar: core/sidebar.md
     - File Manager: core/file-manager.md
     - Assets Manager: core/assets-manager.md
     - Defaults Files: core/defaults-files.md
+    - Custom Templates: academic/custom-templates.md
     - Custom CSS: core/custom-css.md
-    - Snippets: core/snippets.md
-    - AutoCorrect and MagicQuotes: core/autocorrect.md
-    - Searching: core/search.md
-    - Exporting: core/export.md
-    - Table Editor: core/tables.md
-    - Localisation: core/localisation.md
-    - Sidebar: core/sidebar.md
-    - YAML Frontmatter: core/yaml-frontmatter.md
-    - Print and Preview: core/print-preview.md
-    - Math: core/math.md
-  - Academic Tools:
-    - Citations: academic/citations.md
     - Projects: academic/projects.md
-    - Presentations: academic/presentations.md
     - Pomodoro Timer: academic/pomodoro.md
-    - Readability: academic/readability.md
     - Zettelkasten Methods: academic/zkn-method.md
     - Graph View: academic/graph.md
-    - Custom Templates: academic/custom-templates.md
+  - Guides:
+    - Presentations: academic/presentations.md
   - References:
     - FAQ: reference/faq.md
     - Keyboard Shortcuts: reference/keyboard-shortcuts.md
